--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.0",
     "parcel": "^2.8.0",
-    "sharp": "^0.31.3"
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2"
   }
 }
